# OpenSoverignBlog

./: .dockerignore  .env.example  .gitignore  AI2AI.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  compose.yaml  config.example.toml  deny.toml  osb.install.example.toml  osb.intent.example.json  osb.lock.example.json  package-lock.json  package.json  release-channel.json  release.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: bootstrap.rs  local.rs  main.rs  offline_import.rs
apps/cli/src/bootstrap/: dlc_lifecycle.rs
apps/mcp/: Cargo.toml  README.md
apps/mcp/src/: lib.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: admin_auth.rs  admin_tree.rs  admission.rs  advertising.rs  ai_summary.rs  backup.rs  cache.rs  community.rs  config.rs  feature_registry.rs  installation.rs  main.rs  references.rs  social_embeds.rs  version.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/assets/: osb-content.css  osb-content.js
apps/web/src/: admin-access.tsx  admin-tree.tsx  advertising-policy.ts  app.tsx  article-location.ts  auth-policy.ts  authorship.ts  categories.tsx  home-presentation.ts  kakao-adfit.tsx  lib.tsx  main.tsx  public-pages.tsx  references.ts  series.tsx  site-stylesheet.ts  social-embeds.ts  studio-state.ts  studio.tsx  styles.css
apps/web/tests/: admin-access-storage.test.mjs  advertising-policy.test.mjs  article-location.test.mjs  auth-policy.test.mjs  authorship.test.mjs  home-pin-management.test.mjs  home-presentation.test.mjs  references-routing.test.mjs  series-authoring.test.mjs  site-stylesheet.test.mjs  social-embeds.test.mjs  studio-state.test.mjs
crates/assets-fs/: Cargo.toml
crates/assets-fs/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: ai2ai.rs  content.rs  lib.rs  macros.rs  policy.rs  ports.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
crates/plugin-api/tests/fixtures/: rich-plugin.toml
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
deploy/: README.md  custom.css  references.en.md  references.md
deploy/redis/: sentinel.conf
docs/: REQUIREMENTS.md
docs/ai2ai/: A2A-ADAPTER.md  AD-INTEGRATION.md  MACROS.md
docs/architecture/: 0001-modular-kernel.md  0002-community-control-and-readonly-delivery.md  0003-semantic-redis-and-managed-operations.md  CONTENT-RENDERING.md  velog-clean-room.md
docs/legal/: EU-CONSENT.md  application-sbom.cdx.json  dependency-inventory.json
docs/monetization/: FIRST-PARTY-STATIC-ADS.md  KAKAO-ADFIT.md
docs/operations/: CONFIGURATION.md  OFFLINE_IMPORT.md  UPDATES.md
docs/security/: CODE-RUNNER.md
features/code-runner-client/: Cargo.toml
features/code-runner-client/src/: lib.rs
features/comments/: Cargo.toml
features/comments/src/: lib.rs
features/external-auth/: Cargo.toml
features/external-auth/src/: lib.rs
features/monetization-policy/: Cargo.toml
features/monetization-policy/src/: first_party_ad.rs  kakao_adfit.rs  lib.rs
features/rbac/: Cargo.toml
features/rbac/src/: lib.rs
features/seo/: Cargo.toml
features/seo/src/: lib.rs
openapi/: openapi.yaml
openapi/fixtures/: discovery-document.json
plugins/official/ads/: README.md  plugin.toml
plugins/official/ai-authorship/: plugin.toml
plugins/official/ai-summary/: plugin.toml
plugins/official/code-runner/: README.md  plugin.toml
plugins/official/comments/: README.md  plugin.toml
plugins/official/external-auth/: README.md  plugin.toml
plugins/official/home-curation/: plugin.toml
plugins/official/rbac/: README.md  plugin.toml
plugins/official/release-check/: README.md  plugin.toml
plugins/official/seo/: README.md  plugin.toml
plugins/official/social-embeds/: plugin.toml
providers/: README.md  amazon-associates-us.yaml  carbon-ads.yaml  ethicalads.yaml  example-direct-sponsor.yaml  github-sponsors.yaml  google-adsense.yaml  index.json  index.schema.json  kakao-adfit.yaml  ko-fi.yaml  patreon.yaml  polar.yaml  provider.schema.json
schemas/: ad-disclosure.v1.schema.json  ai2ai-envelope.v1.schema.json  consent-policy.v1.schema.json  consent-receipt.v1.schema.json  content-envelope.v1.schema.json  first-party-ad.v1.schema.json  installation-intent.v1.schema.json  installation-lock.v1.schema.json  macro-invocation.v1.schema.json  plugin-manifest.v1.schema.json  release-channel.v1.schema.json
scripts/: generate-supply-chain-artifacts.mjs  osb-init.sh  osb-update-support.py  osb-update.sh  prepare-web-assets.mjs  validate-contracts.mjs  validate-release.mjs
scripts/tests/: osb-init-self-test.sh  osb-update-self-test.sh
