[package]
name = "osb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
osb-assets-fs = { version = "=0.1.0", path = "../../crates/assets-fs" }
osb-kernel = { version = "=0.1.0", path = "../../crates/kernel" }
osb-plugin-api = { version = "=0.1.0", path = "../../crates/plugin-api" }
osb-renderer = { version = "=0.1.0", path = "../../crates/renderer" }
osb-storage-sqlite = { version = "=0.1.0", path = "../../crates/storage-sqlite" }
osb-feature-seo = { version = "=0.1.0", path = "../../features/seo" }
osb-feature-code-runner-client = { version = "=0.1.0", path = "../../features/code-runner-client" }
osb-feature-comments = { version = "=0.1.0", path = "../../features/comments" }
osb-feature-external-auth = { version = "=0.1.0", path = "../../features/external-auth" }
openidconnect.workspace = true
rand_core.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
