[package]
name = "osb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
osb-assets-fs = { version = "=0.1.1", path = "../../crates/assets-fs" }
osb-kernel = { version = "=0.1.1", path = "../../crates/kernel" }
osb-plugin-api = { version = "=0.1.1", path = "../../crates/plugin-api" }
osb-renderer = { version = "=0.1.1", path = "../../crates/renderer" }
osb-storage-sqlite = { version = "=0.1.1", path = "../../crates/storage-sqlite" }
osb-feature-seo = { version = "=0.1.1", path = "../../features/seo" }
osb-feature-code-runner-client = { version = "=0.1.1", path = "../../features/code-runner-client" }
osb-feature-comments = { version = "=0.1.1", path = "../../features/comments" }
osb-feature-external-auth = { version = "=0.1.1", path = "../../features/external-auth" }
osb-feature-monetization-policy = { version = "=0.1.1", path = "../../features/monetization-policy" }
openidconnect.workspace = true
percent-encoding.workspace = true
rand_core.workspace = true
reqwest.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
tower.workspace = true
