[package]
name = "osb-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ammonia.workspace = true
osb-kernel = { version = "=0.1.2", path = "../kernel" }
pulldown-cmark.workspace = true
serde.workspace = true
sha2.workspace = true
url.workspace = true
