[package]
name = "osb-storage-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
osb-kernel = { version = "=0.1.0", path = "../kernel" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
