[package]
name = "osb-feature-comments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
osb-renderer = { version = "=0.1.0", path = "../../crates/renderer" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
