[package]
name = "osb-feature-external-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
osb-kernel = { version = "=0.1.1", path = "../../crates/kernel" }
serde.workspace = true
thiserror.workspace = true
