[package]
name = "osb-feature-monetization-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
